--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,8 +11,8 @@ tasks:
 
   build:
     cmds:
-      - go build -ldflags="-s -w" -o c3l main.go 
-    silent: true
+      - go build -ldflags="-s -w -X main.version={{.Version}}" -o c3l main.go 
+    silent: false
 
   test-release:
     cmds:
